@@ -2,7 +2,8 @@
 
 INCLUDES = \
 	-DPROCMAN_DATADIR=\"$(datadir)/procman/\" \
-	@PROCMAN_CFLAGS@ -DGTK_DISABLE_DEPRECATED=1
+	@PROCMAN_CFLAGS@ -DGTK_DISABLE_DEPRECATED=1 \
+	-DGNOME_DISABLE_DEPRECATED
 
 bin_PROGRAMS = procman
 
