@@ -1,5 +1,15 @@
 2001-12-11  Kevin Vandersloot <kfv101@psu.edu>
 
+	* prettytable.c: get rid of deprecated gnome_datadir_file
+
+	* procdialogs.c: port the root dialog to gtk_dialog. Procman
+	is now 100% pure GNOME 2.0. Also indicate the nice level 
+	of the selected process initially in the renice dialog.
+
+	* Makefile.am: add GNOME_DISABLE_DEPRECATED
+
+2001-12-11  Kevin Vandersloot <kfv101@psu.edu>
+
 	* compile with GTK_DISABLE_DEPRECATED. Also remove all
 	gnome_dialogs except for the root stuff
 
